add wordpress secret

--- a/apps/wordpress/secret.yaml
+++ b/apps/wordpress/secret.yaml
@@ -4,7 +4,8 @@ metadata:
     name: wordpress
     namespace: default
 stringData:
-    mariadb-password: ENC[AES256_GCM,data:ijYDovjw3RrIcVfF0L4g/AsK/pfV1QwbRm1ZNka7seLu7FadXn8YyYzPJIdwovuT,iv:1d2Jaa4j4sm7honDG1F29lWaqxs7WYMS/6/shtMuhJ4=,tag:8EO32dITTyo5OAGOjA2+xg==,type:str]
+    mariadb-password: ENC[AES256_GCM,data:ZGMaZmmVC1kAXL3UsxR4VWG+LWo+03Q+UWEnO9W/VBPTxStYPN3Bi42z6QOv0A2D,iv:4UMQGeHjzhJpjNzH4t04fdhp1CFFoPt4Fg/MqCVbffE=,tag:pRRAP+zTfZ5IeG3iT99cmA==,type:str]
+    wordpress-password: ENC[AES256_GCM,data:18pfwdD6tgszH7ujdOLpj2q+4mc4b5Ia8Gs5WuJ9AR9wFMyjcozMeTf0O9W6ITwX,iv:PGuqQWyjVC4GRN1Br6xy7pSzI0KaeHEi+6XCHljANes=,tag:E2kXFpDnXF8jhqETFVy6Fw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +15,14 @@ sops:
         - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwdmwzSG9INDc2NkxVYldO
-            c0h3aytGZXc2YldoVXBvZHV5Y2FWZGxmWWdVClQ2WGp4aG43SUpiakNZTFpnbWx5
-            T3oybXhKTnIxaytBRzBCcEZQUnBaYVUKLS0tIE1LZ2dielNZZThuV3pCa0NZNnBM
-            MHd0MGdaSWRkRHNqcmlOajZCS2JDZXMKd1iSGnro/ZbJYOp0psG945WijnG1y2vc
-            UeBhcgVcIl8Ig4rx5oBlLcFeizvWfriB8ltNvxFLORIshvqc3MxuZA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5ZUZJTXRvQ0drRU4xck9l
+            alVzcGl4TThMUXRXazJrckRYZENQa0NQUGlNCnhBSnJwRmhEYS9rOUhDazhzT1Jw
+            TGxlM29vV0phbWFVa2hvazR4b3ZZNkUKLS0tIENlVlBHU2JvUHdYMVJIYXdDaUlN
+            TFhzb2ZGRUxaL0pmaktya25xdHQwcDQKz8mb188yKVjA54XZO+u2N+Bmge+HkKzj
+            qeegqvc/VzxKvQSdm+pRHZ5TeTgH+4n1CNtr7na1UPTtCJDm8MCpiQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-23T21:37:46Z"
-    mac: ENC[AES256_GCM,data:mUZD5ssU8qPir4fZZkM3I95Vlgyi3ZZBUgVKHQTPinAqI01EZgw+L/aexhauscQTb1zalZtRDAHMK01Ce6F1ntyeWOiHysr3nTHxYmIaQzYapfLCJjtnW2xh0K3Fh3rMi0Tror9plbhkb4NEoYCVkQMPqOaFCPwA44jAT7OIdAQ=,iv:yhWQnjdg6h8TAZGdoU96C6r+U1+W7Ip72UEUOIGHOwg=,tag:vXmGf1rWlYloazjsjqlOqA==,type:str]
+    lastmodified: "2023-11-23T22:11:16Z"
+    mac: ENC[AES256_GCM,data:uIDW6xD0OUz1Ve9MCg1z7IYZHjxCQ48j7BONvRx8QRyC37qBvKvN9D8f6C1gc3aasEHzoHjJ9zk0Hsdoap5FmGsY3nJh71HF8Kpvtkmb+a/LQgIo394FIqDgdQEnA1tEm0PnyjfENo4g79gpuimPc1Enud3nCSH6ANN+EnLuT5c=,iv:Wi8YBnXF9XxSwvk3XfYi1qLESqOH2MhOvZd8CajmP5U=,tag:WIyjN8bPCZW9mILUqs4GoQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
