chore: Update database name to mysql

--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -41,7 +41,7 @@ spec:
       host: mysql.default.svc.cluster.local
       port: 3306
       user: pacholoamit
-      database: wordpress
+      database: mysql
     ingress:
       enabled: true
       annotations:
