--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -38,10 +38,10 @@ spec:
     mariadb:
       enabled: false
     externalDatabase:
-      host: mysql.default.svc.cluster.local
+      host: mariadb.default.svc.cluster.local
       port: 3306
       user: root
-      database: mysql
+      database: mariadb
       existingSecret: wordpress
     ingress:
       enabled: true
