--- a/clusters/home/mariadb.yaml
+++ b/clusters/home/mariadb.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: mysql
+  name: mariadb
   namespace: flux-system
 spec:
   decryption:
@@ -14,7 +14,7 @@ spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./apps/mysql
+  path: ./apps/mariadb
   sourceRef:
     kind: GitRepository
     name: flux-system
