--- a/clusters/home/wordpress.yaml
+++ b/clusters/home/wordpress.yaml
@@ -11,7 +11,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: longhorn
-    - name: mysql
+    - name: mariadb
   interval: 1m
   prune: true
   wait: true
