--- a/apps/mariadb/release.yaml
+++ b/apps/mariadb/release.yaml
@@ -40,6 +40,7 @@ spec:
     persistence: 
       enabled: true
       storageClass: longhorn
+      storageClassName: longhorn
       accessModes:
         - ReadWriteMany
       size: 8Gi
