feat: Add PVC for MariaDB

--- a/apps/mariadb/release.yaml
+++ b/apps/mariadb/release.yaml
@@ -37,10 +37,6 @@ spec:
     #     enabled: false
     #   livenessProbe:
     #     enabled: false
-    persistence: 
+    persistence:
       enabled: true
-      storageClass: longhorn
-      storageClassName: longhorn
-      accessModes:
-        - ReadWriteMany
-      size: 8Gi
+      existingClaim: mariadb
