--- a/clusters/home/mariadb.yaml
+++ b/clusters/home/mariadb.yaml
@@ -1,22 +1,22 @@
 
 
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: mariadb
-#   namespace: flux-system
-# spec:
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-age
-#   dependsOn:
-#     - name: longhorn
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   path: ./apps/mariadb
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: mariadb
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: longhorn
+  interval: 1m
+  prune: true
+  wait: true
+  path: ./apps/mariadb
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
