feat: add replication architecture to MariaDB image

--- a/apps/mariadb/release.yaml
+++ b/apps/mariadb/release.yaml
@@ -24,6 +24,7 @@ spec:
         namespace: default
       interval: 1m
   values:
+    architecture: replication
     image:
       debug: true
     auth:
