fix: Set deployment replicas to 1

--- a/helm/developer-portfolio/templates/deployment.yaml
+++ b/helm/developer-portfolio/templates/deployment.yaml
@@ -5,9 +5,7 @@ metadata:
   labels:
     {{- include "developer-portfolio.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include "developer-portfolio.selectorLabels" . | nindent 6 }}
