--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -51,6 +51,7 @@ spec:
       existingSecret: wordpress
     ingress:
       enabled: true
+      ingressClassName: nginx
       annotations:
         kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/proxy-body-size: 999m
