chore: Update wordpressScheme in release.yaml

--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -28,7 +28,7 @@ spec:
     wordpressEmail: pacholoamit.tech@gmail.com
     wordpressFirstName: Pacholo
     wordpressLastName: Amit
-    wordpressScheme: https
+    wordpressScheme: http
     persistence:
       enabled: true
       storageClass: longhorn
