--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -37,30 +37,30 @@ spec:
         - ReadWriteMany
       size: 8Gi
     mariadb:
-      enabled: false
-      # primary:
-      #   enabled: true
-      #   storageClass: longhorn
-      #   accessModes:
-      #     - ReadWriteMany
-      #   size: 8Gi
-    externalDatabase:
-      host: mariadb.default.svc.cluster.local
-      port: 3306
-      user: root
-      database: mariadb
-      existingSecret: wordpress
-    ingress:
       enabled: true
-      ingressClassName: nginx
-      annotations:
-        kubernetes.io/ingress.class: nginx
-        nginx.ingress.kubernetes.io/proxy-body-size: 999m
-        gethomepage.dev/enabled: "true"
-        gethomepage.dev/description: Developer portfolio
-        gethomepage.dev/group: Apps/Services
-        gethomepage.dev/icon: wordpress.png
-        gethomepage.dev/name: Developer Portfolio WP
-      pathType: Prefix
-      hostname: wp.pacholoamit.com
-      path: /
+      primary:
+        enabled: true
+        storageClass: longhorn
+        accessModes:
+          - ReadWriteMany
+        size: 8Gi
+    # externalDatabase:
+    #   host: mariadb.default.svc.cluster.local
+    #   port: 3306
+    #   user: root
+    #   database: mariadb
+    #   existingSecret: wordpress
+    # ingress:
+    #   enabled: true
+    #   ingressClassName: nginx
+    #   annotations:
+    #     kubernetes.io/ingress.class: nginx
+    #     nginx.ingress.kubernetes.io/proxy-body-size: 999m
+    #     gethomepage.dev/enabled: "true"
+    #     gethomepage.dev/description: Developer portfolio
+    #     gethomepage.dev/group: Apps/Services
+    #     gethomepage.dev/icon: wordpress.png
+    #     gethomepage.dev/name: Developer Portfolio WP
+    #   pathType: Prefix
+    #   hostname: wp.pacholoamit.com
+    #   path: /
