--- a/apps/wordpress/svc.yaml
+++ b/apps/wordpress/svc.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vaultwarden
+  name: wordpress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
