fix: Update service name in svc.yaml

--- a/apps/wordpress/svc.yaml
+++ b/apps/wordpress/svc.yaml
@@ -33,6 +33,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: vaultwarden
+                name: wordpress
                 port:
                   number: 8080
