--- a/apps/wordpress/svc.yaml
+++ b/apps/wordpress/svc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: wordpress
+    app.kubernetes.io/name: wordpress
   ports:
   - port: 8080
     targetPort: 8080
