--- a/helm/developer-portfolio/values.yaml
+++ b/helm/developer-portfolio/values.yaml
@@ -14,6 +14,7 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+serviceAccountName: "developer-portfolio-service-account"
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
