chore: Add helmignore, helpers, hpa, and test-connection files

--- a/helm/developer-portfolio/templates/deployment.yaml
+++ b/helm/developer-portfolio/templates/deployment.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     {{- include "developer-portfolio.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "developer-portfolio.selectorLabels" . | nindent 6 }}
@@ -38,8 +40,14 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-          livenessProbe: null
-          readinessProbe: null
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
