chore(deployment): fix deployment name

--- a/apps/developer-portfolio/deployment.yaml
+++ b/apps/developer-portfolio/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: developer-portfoliodeveloper-portfolio
+  name: developer-portfolio
   namespace: default
 spec:
   replicas: 1
