--- a/clusters/home/reactiveresume.yaml
+++ b/clusters/home/reactiveresume.yaml
@@ -2,19 +2,13 @@
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
 # kind: Kustomization
 # metadata:
-#   name: wordpress
+#   name: reactiveresume
 #   namespace: flux-system
 # spec:
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-age
-#   dependsOn:
-#     - name: longhorn
 #   interval: 1m
 #   prune: true
 #   wait: true
-#   path: ./apps/wordpress
+#   path: ./apps/reactiveresume
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
