style: remove commented out code in release.yaml

--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -15,11 +15,11 @@ spec:
         namespace: default
       interval: 1m
   values:
-    existingSecret: wordpress
-    wordpressEmail: pacholoamit.tech@gmail.com
-    wordpressFirstName: Pacholo
-    wordpressLastName: Amit
-    wordpressBlogName: Pacholo Amit's Developer Portfolio
+    # existingSecret: wordpress
+    # wordpressEmail: pacholoamit.tech@gmail.com
+    # wordpressFirstName: Pacholo
+    # wordpressLastName: Amit
+    # wordpressBlogName: Pacholo Amit's Developer Portfolio
     # persistence:
     #   enabled: true
     #   storageClass: longhorn
