--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -14,7 +14,7 @@ spec:
         name: bitnami # Repo location in mysql
         namespace: default
       interval: 1m
-  values:
+  # values:
     # existingSecret: wordpress
     # wordpressEmail: pacholoamit.tech@gmail.com
     # wordpressFirstName: Pacholo
