--- a/clusters/home/wordpress.yaml
+++ b/clusters/home/wordpress.yaml
@@ -18,3 +18,10 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  values:
+    mariadb:
+      auth:
+        rootPassword: supersecretpassword
+        database: bitnami_wordpress
+        user: bn_wordpress
+        password: supersecretpassword
