--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -14,7 +14,13 @@ spec:
         name: bitnami # Repo location in mysql
         namespace: default
       interval: 1m
-  # values:
+  values:
+    mariadb:
+    auth:
+      rootPassword: supersecretpassword
+      database: bitnami_wordpress
+      user: bn_wordpress
+      password: supersecretpassword
     # existingSecret: wordpress
     # wordpressEmail: pacholoamit.tech@gmail.com
     # wordpressFirstName: Pacholo
