--- a/apps/wordpress/kustomization.yaml
+++ b/apps/wordpress/kustomization.yaml
@@ -1,7 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - repository.yaml
-  - release.yaml
+  - mariadb.pvc.yaml
+  - mariadb.deployment.yaml
+  - wordpress.deployment.yaml
+  - wordpress.pvc.yaml
+  - wordpress.svc.yaml
+  # - release.yaml
   # - secret.yaml
-  - svc.yaml
+  # - svc.yaml
