--- a/apps/wordpress/release.yaml
+++ b/apps/wordpress/release.yaml
@@ -14,42 +14,42 @@ spec:
         name: bitnami # Repo location in mysql
         namespace: default
       interval: 1m
-    # existingSecret: wordpress
-    # wordpressEmail: pacholoamit.tech@gmail.com
-    # wordpressFirstName: Pacholo
-    # wordpressLastName: Amit
-    # wordpressBlogName: Pacholo Amit's Developer Portfolio
-    # persistence:
-    #   enabled: true
-    #   storageClass: longhorn
-    #   accessModes:
-    #     - ReadWriteMany
-    #   size: 5Gi
-    # mariadb:
-    #   enabled: true
-    #   primary:
-    #     enabled: true
-    #     storageClass: longhorn
-    #     accessModes:
-    #       - ReadWriteMany
-    #     size: 5Gi
-    # externalDatabase:
-    #   host: mariadb.default.svc.cluster.local
-    #   port: 3306
-    #   user: root
-    #   database: mariadb
-    #   existingSecret: wordpress
-    # ingress:
-    #   enabled: true
-    #   ingressClassName: nginx
-    #   annotations:
-    #     kubernetes.io/ingress.class: nginx
-    #     nginx.ingress.kubernetes.io/proxy-body-size: 999m
-    #     gethomepage.dev/enabled: "true"
-    #     gethomepage.dev/description: Developer portfolio
-    #     gethomepage.dev/group: Apps/Services
-    #     gethomepage.dev/icon: wordpress.png
-    #     gethomepage.dev/name: Developer Portfolio WP
-    #   pathType: Prefix
-    #   hostname: wp.pacholoamit.com
-    #   path: /
+    existingSecret: wordpress
+    wordpressEmail: pacholoamit.tech@gmail.com
+    wordpressFirstName: Pacholo
+    wordpressLastName: Amit
+    wordpressBlogName: Pacholo Amit's Developer Portfolio
+    persistence:
+      enabled: true
+      storageClass: longhorn
+      accessModes:
+        - ReadWriteMany
+      size: 5Gi
+    mariadb:
+      enabled: true
+      primary:
+        enabled: true
+        storageClass: longhorn
+        accessModes:
+          - ReadWriteMany
+        size: 5Gi
+    externalDatabase:
+      host: mariadb.default.svc.cluster.local
+      port: 3306
+      user: root
+      database: mariadb
+      existingSecret: wordpress
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        nginx.ingress.kubernetes.io/proxy-body-size: 999m
+        gethomepage.dev/enabled: "true"
+        gethomepage.dev/description: Developer portfolio
+        gethomepage.dev/group: Apps/Services
+        gethomepage.dev/icon: wordpress.png
+        gethomepage.dev/name: Developer Portfolio WP
+      pathType: Prefix
+      hostname: wp.pacholoamit.com
+      path: /
