--- a/apps/wordpress/wordpress.svc.yaml
+++ b/apps/wordpress/wordpress.svc.yaml
@@ -18,6 +18,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: wordpress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: 999m
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/description: Developer portfolio
+    gethomepage.dev/group: Apps/Services
+    gethomepage.dev/icon: wordpress.png
+    gethomepage.dev/name: Developer Portfolio WP
   labels:
     name: wordpress
 spec:
