refactor: Update resource names and file names in wordpress deployment configuration

--- a/apps/wordpress/mariadb.statefulset.yaml
+++ b/apps/wordpress/mariadb.statefulset.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mariadb
-  namespace: default
 spec:
+  serviceName: "mariadb"
   replicas: 1
   selector:
     matchLabels:
@@ -31,7 +31,12 @@ spec:
         volumeMounts:
         - name: mariadb-persistent-storage
           mountPath: /var/lib/mysql
-      volumes:
-      - name: mariadb-persistent-storage
-        persistentVolumeClaim:
-          claimName: mariadb
+  volumeClaimTemplates:
+  - metadata:
+      name: mariadb-persistent-storage
+    spec:
+      storageClassName: longhorn
+      accessModes: [ "ReadWriteMany" ]
+      resources:
+        requests:
+          storage: 5Gi
