--- a/apps/wordpress/kustomization.yaml
+++ b/apps/wordpress/kustomization.yaml
@@ -2,11 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  - mariadb.pvc.yaml
-  - mariadb.deployment.yaml
+  - mariadb.statefulset.yaml
+  - mariadb.service.yaml
   - wordpress.deployment.yaml
   - wordpress.pvc.yaml
-  - wordpress.svc.yaml
+  - wordpress.service.yaml
   # - release.yaml
   # - secret.yaml
   # - svc.yaml
