--- a/apps/wordpress/wordpress.deployment.yaml
+++ b/apps/wordpress/wordpress.deployment.yaml
@@ -17,7 +17,7 @@ spec:
         image: wordpress:latest
         env:
         - name: WORDPRESS_DB_HOST
-          value: mariadb
+          value: mariadb.default.svc.cluster.local
         - name: WORDPRESS_DB_NAME
           value: wordpress
         - name: WORDPRESS_DB_USER
