--- a/apps/wordpress/secret.yaml
+++ b/apps/wordpress/secret.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: wordpress
-    namespace: default
+type: Opaque
 stringData:
-    mariadb-password: ENC[AES256_GCM,data:r0/99SclCUwC4l83sklXz+SRmzgt592O5GyLAQNmCIYCIC4zuhy8kKtpZvC9mY75dNYMM+lwj8ndLHBD8Cs9rih6/B97,iv:0fwBNs8jIG2hAjBBAHH6ZCPZ03MpfF3WEni3br7WcpY=,tag:yZzYH2dVwnVpCPBTiQHlmg==,type:str]
-    wordpress-password: ENC[AES256_GCM,data:5e48W0mS9q02xNrlLq+GEHL/C4IDKswkEalnQvCgR7hh1lpe50RoWP5Db1e6KkCLya4HBjT+RjRHjpTaRLqa77t8jb7z,iv:tDftO9vc6MWR97QygdZBvZUblpqkBu2ANyo9dA0mtVo=,tag:IoHyuv8o/HqItdo9adxZsg==,type:str]
+    password: ENC[AES256_GCM,data:F8tkVXrl5PKS7JCiZKETK97+CUhwMB+vijjsPSntNDTlAJPSR1nIj5Sh6CkHvc+OBIpqBdlj+6AbxebOUIPXO9Z0fMgq,iv:kziudUOzKgf7thX7pvdolEGv2K+VYiJr1D5s7neGqh8=,tag:s2OFdU2X9hvW6sXx7KChEw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +14,14 @@ sops:
         - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5ZUZJTXRvQ0drRU4xck9l
-            alVzcGl4TThMUXRXazJrckRYZENQa0NQUGlNCnhBSnJwRmhEYS9rOUhDazhzT1Jw
-            TGxlM29vV0phbWFVa2hvazR4b3ZZNkUKLS0tIENlVlBHU2JvUHdYMVJIYXdDaUlN
-            TFhzb2ZGRUxaL0pmaktya25xdHQwcDQKz8mb188yKVjA54XZO+u2N+Bmge+HkKzj
-            qeegqvc/VzxKvQSdm+pRHZ5TeTgH+4n1CNtr7na1UPTtCJDm8MCpiQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKRHpwdVpVV0Rwa214U1pr
+            V1RFdC9IWXBNSU5nUFNjWHdZMTVERTBrYWx3CmYyTDdrcTYxaFhjdUVMZkpsbytV
+            bzhDTWF6a0sxOXNwdklmYTFmM3FUYWcKLS0tIGtrMXBZN1Z4WEZFb1FUVnIxUFlF
+            SFZkNkIxVGE0Y0pIMEE5Y0VPUWtSWmcKOHCnrSJ0isUoJ4gxDoYx43yqjLso1OMB
+            1yLnrIhsWUmCIasUEnXgsLoxOJgBkCIl0v0t0Eks7EgpWoWWAPnvaA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-23T22:56:08Z"
-    mac: ENC[AES256_GCM,data:l/vch+itDk5NkE32vCMuDEt6y5O30Nm0aV9WNnZ8sraPOODcpVtoqiueirmTHLWmupASLbK22/zumovQE2Fh9J/VXuFPdTIu4smzbq3WqiirZtja2tPCojzVe8ZUF1QcFvkN3RpwxOiVtpCpkgXv9pmbtUqPaHgHElgeDCMZ804=,iv:3ecid/c2jfDc7CDpBwnfNxXKcZVwAhG0xrknZBniPdA=,tag:db5HBmHWxr8VmzOBhaHfqg==,type:str]
+    lastmodified: "2023-11-24T14:24:31Z"
+    mac: ENC[AES256_GCM,data:HqSH3xNZSBUGbEP3nK4MZ5dQuHFRMiZAwozx5mORn5RxVg1u6hXXLxZwVansgJle5Srvyivv/61IOPU8ctSK7G9LpHN7jg5CG9CWyFL+GmH+5fLY3t+OFGtXNumr6R/vb49wSw7U0+3GPyKXn51oVY5EgOGA2uVq6ZPV2HBMIiY=,iv:B3+Ayscj828uhNMtWOXlNQArNqusPds/KmZBeX52FSg=,tag:HhFKUdyIF56YRBpP18LIVw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
