--- a/apps/wordpress/mariadb.service.yaml
+++ b/apps/wordpress/mariadb.service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mariadb
+  labels:
+    app: mariadb
+    name: mariadb-service
 spec:
   selector:
     app: mariadb
   ports:
-  - protocol: TCP
-    port: 3306
+  - port: 3306
     targetPort: 3306
