chore: Update decryption configuration

--- a/clusters/home/wordpress.yaml
+++ b/clusters/home/wordpress.yaml
@@ -5,10 +5,10 @@ metadata:
   name: wordpress
   namespace: flux-system
 spec:
-  # decryption:
-  #   provider: sops
-  #   secretRef:
-  #     name: sops-age
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   # dependsOn:
   #   - name: longhorn
   interval: 1m
