chore: update secret and deployment names

--- a/apps/wordpress/secret.yaml
+++ b/apps/wordpress/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: wordpress
+    name: mariadb
 stringData:
     password: ENC[AES256_GCM,data:F8tkVXrl5PKS7JCiZKETK97+CUhwMB+vijjsPSntNDTlAJPSR1nIj5Sh6CkHvc+OBIpqBdlj+6AbxebOUIPXO9Z0fMgq,iv:kziudUOzKgf7thX7pvdolEGv2K+VYiJr1D5s7neGqh8=,tag:s2OFdU2X9hvW6sXx7KChEw==,type:str]
 sops:
@@ -19,8 +19,8 @@ sops:
             SFZkNkIxVGE0Y0pIMEE5Y0VPUWtSWmcKOHCnrSJ0isUoJ4gxDoYx43yqjLso1OMB
             1yLnrIhsWUmCIasUEnXgsLoxOJgBkCIl0v0t0Eks7EgpWoWWAPnvaA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-24T14:32:03Z"
-    mac: ENC[AES256_GCM,data:ApTQm6UwT7E1N4FjHB/bLyCqmPQtZmakEA+rufj2vKtgv1i11fOUFRYeyH3iGRNHt3Fmsgk+Z/T4KXPHtxuVjLp40V7hftuuPqziREWi9eBx2P+908Azts9QaOPAqp2Y0ld94qD2SlivyHszjwaSMJrYekgBLUsnkFNVSkV52OE=,iv:84B5C8DhN4m9i3nlYSH9iVLk/SCvUtOfjVANos4tB2g=,tag:jwbSub2S/9MzZicqgEnTkg==,type:str]
+    lastmodified: "2023-11-24T14:42:01Z"
+    mac: ENC[AES256_GCM,data:n3nmFY3urDXmWb2P4/wfx1zMJ89BseQSTyrb1z/SzzVvaSAL33bEES/zL+DdjNyC4E5e80cXrnOgeoaGAKBjebAXqx0ZUszj9prz6e3j3iFK252ifFvymRAjJvLVsFB2DCDJhShD4BjocwQZzvspe12GfE+xU9rEie3EQZM6508=,iv:/KSL/nWgWzQ2/lTq0ZSDrQuQyRuuSLGWzEU5NF5iz+U=,tag:A+FXYHZbHP2fnEFWmaMiqg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
