--- a/apps/wordpress/wordpress.deployment.yaml
+++ b/apps/wordpress/wordpress.deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: wordpress
+              name: mariadb
               key: password
         ports:
         - containerPort: 80
