--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -56,6 +56,7 @@ spec:
         gethomepage.dev/group: Apps/Services
         gethomepage.dev/icon: n8n.png
         gethomepage.dev/name: n8n
+        gethomepage.dev/weight: 2
       hosts:
         - host: n8n.pacholoamit.com
           paths:
