--- a/apps/vaultwarden/service.yaml
+++ b/apps/vaultwarden/service.yaml
@@ -25,6 +25,7 @@ metadata:
     gethomepage.dev/group: Apps/Services
     gethomepage.dev/icon: https://github.com/bitwarden/brand/blob/master/icons/128x128.png?raw=true
     gethomepage.dev/name: Vaultwarden
+    gethomepage.dev/weight: "2"
     gethomepage.dev/pod-selector: app=vaultwarden
 spec:
   rules:
