--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -1,9 +1,45 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: vaultwarden
+#   namespace: default
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: vaultwarden
+#   template:
+#     metadata:
+#       labels:
+#         app: vaultwarden
+#     spec:
+#       containers:
+#         - name: vaultwarden
+#           image: vaultwarden/server:1.30.1
+#           volumeMounts:
+#             - name: vaultwarden-volume
+#               mountPath: /data
+#           env:
+#             - name: LOG_FILE
+#               value: /data/vaultwarden.log
+#             - name: LOG_LEVEL
+#               value: warn
+#             - name: SIGNUPS_ALLOWED
+#               value: "true"
+#             - name: SHOW_PASSWORD_HINT
+#               value: "true"
+#       volumes:
+#         - name: vaultwarden-volume
+#           persistentVolumeClaim:
+#             claimName: vaultwarden-pvc
+---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: vaultwarden
   namespace: default
 spec:
+  serviceName: "vaultwarden"
   replicas: 1
   selector:
     matchLabels:
@@ -28,7 +64,15 @@ spec:
               value: "true"
             - name: SHOW_PASSWORD_HINT
               value: "true"
-      volumes:
-        - name: vaultwarden-volume
-          persistentVolumeClaim:
-            claimName: vaultwarden-pvc
+  volumeClaimTemplates:
+    - metadata:
+        name: vaultwarden-volume
+      spec:
+        storageClassName: longhorn
+        dataSource:
+          kind: PersistentVolumeClaim
+          name: vaultwarden-pvc
+        accessModes: ["ReadWriteMany"]
+        resources:
+          requests:
+            storage: 5Gi
