fix(deployment.yaml): Add dataSource for migration of data

--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -69,6 +69,10 @@ spec:
         name: vaultwarden-volume
       spec:
         storageClassName: longhorn
+        # dataSource From previous migration of data from deployment
+        dataSource:
+          kind: PersistentVolumeClaim
+          name: vaultwarden-pvc
         accessModes: ["ReadWriteMany"]
         resources:
           requests:
