--- a/apps/vaultwarden/kustomization.yaml
+++ b/apps/vaultwarden/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - deployment.yaml
-  - pvc.yaml
+  - statefulset.yaml
   - service.yaml
