--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -5,6 +5,15 @@ metadata:
   namespace: default
 spec:
   interval: 5m
+  install:
+      createNamespace: true
+      crds: CreateReplace
+      remediation:
+          retries: 3
+  upgrade:
+      crds: CreateReplace
+      remediation:
+          retries: 3
   chart:
     spec:
       chart: n8n
