--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -48,15 +48,15 @@ spec:
       WEBHOOK_TUNNEL_URL: https://n8n.pacholoamit.com
     ingress:
       enabled: true
-      annotations:
-        kubernetes.io/ingress.class: nginx
-        nginx.ingress.kubernetes.io/proxy-body-size: 999m
-        gethomepage.dev/enabled: "true"
-        gethomepage.dev/description: Open source workflow automation tool
-        gethomepage.dev/group: Apps/Services
-        gethomepage.dev/icon: n8n.png
-        gethomepage.dev/name: n8n
-        gethomepage.dev/weight: 2
+      # annotations:
+      #   kubernetes.io/ingress.class: nginx
+      #   nginx.ingress.kubernetes.io/proxy-body-size: 999m
+      #   gethomepage.dev/enabled: "true"
+      #   gethomepage.dev/description: Open source workflow automation tool
+      #   gethomepage.dev/group: Apps/Services
+      #   gethomepage.dev/icon: n8n.png
+      #   gethomepage.dev/name: n8n
+      #   gethomepage.dev/weight: 2
       hosts:
         - host: n8n.pacholoamit.com
           paths:
