refactor: Rename and update PostgreSQL resources

--- a/apps/postgresql/release.yaml
+++ b/apps/postgresql/release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: mariadb
+  name: postgresql
   namespace: default
 spec:
   interval: 5m
@@ -16,21 +16,18 @@ spec:
           retries: 3
   chart:
     spec:
-      chart: mariadb
-      version: "14.x.x"
+      chart: postgresql
+      version: "13.2.x"
       sourceRef:
         kind: HelmRepository
         name: bitnami
         namespace: default
       interval: 1m
   values:
-    architecture: standalone
-    image:
-      debug: true
     auth:
       username: pacholoamit
-      database: mariadb
-      existingSecret: mariadb
+      database: postgresql
+      existingSecret: postgresql
     # primary:
     #   startupProbe:
     #     enabled: false
@@ -41,7 +38,6 @@ spec:
     persistence: 
       enabled: true
       storageClass: longhorn
-      storageClassName: longhorn
       accessModes:
         - ReadWriteMany
-      size: 8Gi
+      size: 10Gi
