--- a/apps/postgresql/release.yaml
+++ b/apps/postgresql/release.yaml
@@ -24,13 +24,28 @@ spec:
         namespace: default
       interval: 1m
   values:
+    global:
+      storageClass: longhorn
     auth:
       username: pacholoamit
       database: postgresql
       existingSecret: postgresql
-    persistence: 
+    primary:
+      persistence: 
+        enabled: true
+        accessModes:
+          - ReadWriteMany
+        size: 10Gi
+    readReplicas:
+      persistence: 
+        enabled: true
+        accessModes:
+          - ReadWriteMany
+        size: 10Gi
+    backup:
       enabled: true
-      storageClass: longhorn
-      accessModes:
-        - ReadWriteMany
-      size: 10Gi
+      cronjob:
+        schedule: "0 1 * * *"
+        accessModes:
+          - ReadWriteMany
+        size: 10Gi
