style: Comment out unnecessary lines in postgresql release.yaml

--- a/apps/postgresql/release.yaml
+++ b/apps/postgresql/release.yaml
@@ -32,14 +32,14 @@ spec:
       existingSecret: postgresql
     primary:
       persistence: 
-        enabled: true
+        # enabled: true
         existingClaim: postgresql-primary
     readReplicas:
       persistence: 
-        enabled: true
+        # enabled: true
         existingClaim: postgresql-replica
     backup:
-      enabled: true
+      # enabled: true
       cronjob:
         schedule: "0 1 * * *"
         storage:
