--- a/apps/postgresql/pvc.yaml
+++ b/apps/postgresql/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresql-primary
+  name: data-postgresql-0
   namespace: default
 spec:
   accessModes:
