refactor: Comment out code for read replicas and backup cronjob

--- a/apps/postgresql/release.yaml
+++ b/apps/postgresql/release.yaml
@@ -34,13 +34,13 @@ spec:
       persistence: 
         # enabled: true
         existingClaim: data-postgresql-0
-    readReplicas:
-      persistence: 
-        # enabled: true
-        existingClaim: postgresql-replica
-    backup:
-      # enabled: true
-      cronjob:
-        schedule: "0 1 * * *"
-        storage:
-          existingClaim: postgresql-backup
+    # readReplicas:
+    #   persistence: 
+    #     # enabled: true
+    #     existingClaim: postgresql-replica
+    # backup:
+    #   # enabled: true
+    #   cronjob:
+    #     schedule: "0 1 * * *"
+    #     storage:
+    #       existingClaim: postgresql-backup
