feat: Add apps.yaml and update helm.yaml path

--- a/clusters/home/apps.yaml
+++ b/clusters/home/apps.yaml
@@ -8,6 +8,8 @@ spec:
   interval: 1m
   prune: true
   wait: true
+  dependsOn:
+      - name: helm
   path: ./clusters/home/helm
   sourceRef:
     kind: GitRepository
