--- a/clusters/home/apps.yaml
+++ b/clusters/home/apps.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: helm
+  name: apps
   namespace: flux-system
 spec:
   interval: 1m
