migrate homepage to new dir structure

--- a/clusters/home/apps.yaml
+++ b/clusters/home/apps.yaml
@@ -8,6 +8,10 @@ spec:
   interval: 1m
   prune: true
   wait: true
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: helm
   path: ./clusters/home/apps
