feat: Add decryption configuration for helm deployment

--- a/clusters/home/helm.yaml
+++ b/clusters/home/helm.yaml
@@ -9,6 +9,10 @@ spec:
   prune: true
   wait: true
   path: ./clusters/home/helm
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   sourceRef:
     kind: GitRepository
     name: flux-system
