chore(vaultwarden): Update secret.yaml and kustomization.yaml

--- a/clusters/home/apps/vaultwarden/secret.yaml
+++ b/clusters/home/apps/vaultwarden/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: vaultwarden
+    namespace: default
 type: Opaque
 stringData:
     admin_secret: ENC[AES256_GCM,data:zzVJNqCJjnmR/ZtEKFoXspBGhoijPvonh3ruCSS9ra2s5UAkyUyJiOEs6OQ7eEFS/SviuIyepTpovP+ACnWC,iv:9IKS/xdqqITgJLq8cRsoROqfPjNYZ0912xKwNEE2UHE=,tag:hLPvcQHr/sEBzhaCCYyA5g==,type:str]
@@ -20,8 +21,8 @@ sops:
             ck5zVE9ZeGJNS2pQUzdUU0cwOHk3dFkKYYfMRFc/3DsGGyxJLcC0klRpvW0YZinY
             FD7OliToFi5JaQo32XfiXRU9Y+ly4aBm+BUJ29ar7/acHw8CGRoXdA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-26T19:10:38Z"
-    mac: ENC[AES256_GCM,data:CHu1WlDfu/wqYfqcEZpk2qXzusqiB46YQDHd0Lie1nIxRgY1CvKj/AUr3DqFXdb/j98feETUJmz/nnnvArkuKhIHaVVR3uiMx5EFeTGvySK/IWglDeq4njdrU/85YQ8m0jPiQCh/C4p1dGxe25wqgZsZ4E7WFsLrlUxKZzT1lvc=,iv:GCu3R6U412hbMmWDhVnnGPuyxhDDbFzk2hKIMbAG+fU=,tag:7kmboyIijnP0TMhGb0OnXw==,type:str]
+    lastmodified: "2023-11-26T19:21:02Z"
+    mac: ENC[AES256_GCM,data:HuxJdsJHv6XMO1sFg7SgLIudYicFEEP+1CEI2eNpwk6wxokKfWElM6VkeelgEmr1dGkb/lTrwmiG31m5m9EgJJCthoycSz1PCsuJ+RG2IV4DKn08QYYHNd8payC9aTi5uQ3juh7t8P+/AW+vBdcaBxP2734wWdWj8MQbSvLkBRo=,iv:62ocYHJZXUyPAyUE5aRAz78ZY0Cv4ArG/6T+f77l9Bg=,tag:17dOtjnKpFcLhlVG/OfclA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
