--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -31,8 +31,7 @@ spec:
       repository: vaultwarden/server
       tag: "1.29.2-alpine"
     adminToken:
-      existingSecret: vaultwarden
-      existingSecretKey: admin_secret
+      value: $argon2id$v=19$m=19456,t=2,p=1$TVFGVlVDMEpJMnZQbHVLbEl4NWJVcGYvREhyazBScXBYQU5PaTE3aE5Jdz0$vyl46eeXo+JMsTGuO5BfB8sb7BvdN2xaLt7wNX58plA
     signupsAllowed: true
     invitationsAllowed: true
     data:
