--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -48,7 +48,7 @@ spec:
         gethomepage.dev/icon: https://github.com/bitwarden/brand/blob/master/icons/128x128.png?raw=true
         gethomepage.dev/name: Vaultwarden
         gethomepage.dev/weight: "2"
-        gethomepage.dev/pod-selector: app=vaultwarden
+        # gethomepage.dev/pod-selector: app=vaultwarden
       hostname: vaultwarden.pacholoamit.com
 
     
