--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -4,7 +4,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: vaultwarden-server
+  name: vaultwarden
   namespace: default
 spec:
   interval: 5m
