--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -28,10 +28,10 @@ spec:
       repository: n8nio/n8n
       tag: 1.18.0
       pullPolicy: IfNotPresent
-    extraEnvSecrets:
-      DB_POSTGRESDB_PASSWORD:
-        name: postgresql
-        key: password
+    # extraEnvSecrets:
+    #   DB_POSTGRESDB_PASSWORD:
+    #     name: postgresql
+    #     key: password
     config:
       generic:
         timezone: Asia/Manila
@@ -39,15 +39,18 @@ spec:
       protocol: https
       port: 443
       database:
-        type: postgresdb
-        postgresdb:
-          host: postgresql.default.svc.cluster.local
-          port: 5432
-          database: postgresql
-          user: pacholoamit
+        type: sqlite
+        # postgresdb:
+        #   host: postgresql.default.svc.cluster.local
+        #   port: 5432
+        #   database: postgresql
+        #   user: pacholoamit
 
     persistence:
-      enabled: false
+      enabled: true
+      type: dynamic
+      storageClass: longhorn
+      size: 5Gi
     extraEnv:
       WEBHOOK_TUNNEL_URL: https://n8n.pacholoamit.com
     ingress:
