feat(release.yaml): Add accessModes for PVC

--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -51,6 +51,8 @@ spec:
       type: dynamic
       storageClass: longhorn
       size: 5Gi
+      accessModes:
+        - ReadWriteMany
     extraEnv:
       WEBHOOK_TUNNEL_URL: https://n8n.pacholoamit.com
     ingress:
