feat: Add core dependency to apps.yaml

--- a/clusters/home/apps.yaml
+++ b/clusters/home/apps.yaml
@@ -14,6 +14,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
+    - name: core
   path: ./clusters/home/apps
   sourceRef:
     kind: GitRepository
