--- a/clusters/home/services.yaml
+++ b/clusters/home/services.yaml
@@ -2,15 +2,19 @@
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
 # kind: Kustomization
 # metadata:
-#   name: cloudflare
+#   name: apps
 #   namespace: flux-system
 # spec:
-#   dependsOn:
-#     - name: sealed-secrets
 #   interval: 1m
 #   prune: true
 #   wait: true
-#   path: ./infrastructure/cloudflare
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
+#   dependsOn:
+#     - name: helm
+#   path: ./clusters/home/services
 #   sourceRef:
 #     kind: GitRepository
 #     name: flux-system
