--- a/clusters/home/services.yaml
+++ b/clusters/home/services.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: services
   namespace: flux-system
 spec:
   interval: 1m
