--- a/clusters/home/services/cloudflare/kustomization.yaml
+++ b/clusters/home/services/cloudflare/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cloudflare
+namespace: default
 resources:
   - deployment.yaml
   - secret.yaml
-  - namespace.yaml
