--- a/clusters/home/services.yaml
+++ b/clusters/home/services.yaml
@@ -1,20 +1,20 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: services
-#   namespace: flux-system
-# spec:
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-age
-#   dependsOn:
-#     - name: helm
-#   path: ./clusters/home/services
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: services
+  namespace: flux-system
+spec:
+  interval: 1m
+  prune: true
+  wait: true
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: helm
+  path: ./clusters/home/services
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
