--- a/clusters/home/service.yaml
+++ b/clusters/home/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: services
+  name: service
   namespace: flux-system
 spec:
   interval: 1m
